<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/courseFragment">

    <fragment
        android:id="@+id/courseFragment"
        android:name="com.example.myapplication.Code.Fragment.CourseFragment"
        android:label="@string/course_icon_title"
        tools:layout="@layout/fragment_course" />
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.myapplication.Code.Fragment.MessageFragment"
        android:label="@string/message_icon_title"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.myapplication.Code.Fragment.AccountFragment"
        android:label="@string/account_icon_title"
        tools:layout="@layout/fragment_account" />
</navigation>